--- a/sources/styles/app.css
+++ b/sources/styles/app.css
@@ -1,3 +1,24 @@
+.webix_list_item {
+    /*-moz-box-sizing: border-box;*/
+    /*-webkit-box-sizing: border-box;*/
+    /*box-sizing: border-box;*/
+    padding: 2px 10px;
+    line-height: 29px;
+    cursor: default;
+    border-bottom: none;
+    text-align: left;
+    /*font-weight: bold;*/
+    /*border-color: #ebebeb;*/
+}
+
+.padding-right-10 {
+    padding-right: 10px;
+}
+
+.padding-left-right-10 {
+    padding: 0 10px 0 10px
+}
+
 .webixappstart{
     opacity:0;
 }
